# fastapi_proxykit

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: claude.yml  publish.yml  tests.yml
docs/superpowers/specs/: 2026-03-19-fast-proxy-design.md  2026-03-19-fast-proxy-extensions-design.md
examples/api_gateway/: main.py  test_example.py
examples/legacy_facade/: main.py  test_example.py
examples/multi_env/: main.py  test_example.py
src/fast_proxy/: __init__.py  breaker.py  client.py  models.py  openapi.py  router.py
src/fastapi_proxykit/: __init__.py  breaker.py  client.py  errors.py  router.py
tests/integration/: test_openapi_merge.py  test_router.py
tests/unit/: test_breaker.py  test_client.py  test_models.py  test_openapi.py
